--- a/c++/tinyhttpd/Makefile
+++ b/c++/tinyhttpd/Makefile
@@ -1,7 +1,10 @@
-.PHONY: all gtags tags test build_test clean
+.PHONY: all gtags tags lib test build_test clean
 
 config      := Release
 link        := static
+enable_tiff := yes
+enable_png  := yes
+enable_jpeg := yes
 
 #####################
 # Directories/Files
@@ -11,6 +14,8 @@ incdir := include
 srcdir := src
 mains  := $(addprefix $(srcdir)/, tinyhttpd.cpp)
 srcs   := $(addprefix $(srcdir)/, Httpd.cpp Socket.cpp misc.cpp) $(mains)
+assdir := assets
+assets := $(addprefix $(srcdir)/$(assdir)/, color_matching_functions.tar.gz)
 tstdir := $(addprefix $(srcdir)/, test)
 tests  := $(wildcard $(tstdir)/*.cpp)
 
@@ -22,9 +27,9 @@ objs   := $(patsubst $(srcdir)/%.cpp, $(objdir)/%.o, $(srcs))
 
 libdir := lib
 ifeq ($(link), static)
-	libs := $(patsubst $(srcdir)/%.cpp, $(libdir)/lib%.a,  $(firstword $(mains)))
+	libs := $(patsubst %, $(libdir)/lib%.a,  $(notdir $(CURDIR)))
 else ifeq ($(link), shared)
-	libs := $(patsubst $(srcdir)/%.cpp, $(libdir)/lib%.so, $(firstword $(mains)))
+	libs := $(patsubst %, $(libdir)/lib%.so, $(notdir $(CURDIR)))
 endif
 
 bindir  := bin
@@ -33,7 +38,7 @@ tstbins := $(patsubst $(srcdir)/%.cpp, $(bindir)/%, $(tests))
 
 imgdir := img
 
-external := ../16bpcgen
+extdir := ../16bpcgen
 
 ####################
 # Flags
@@ -46,20 +51,33 @@ endif
 
 ifeq ($(link), static)
 	override CXXFLAGS := --static
-	override LDLIBS   := $(addprefix -l, $(patsubst $(libdir)/lib%.a,%,  $(libs)) $(notdir $(external)))
+	override LDLIBS   := $(addprefix -l, $(patsubst $(libdir)/lib%.a,%,  $(libs)) $(notdir $(extdir)))
 	override cxxopt   := $(filter-out -fsanitize=address, $(cxxopt))
 else ifeq ($(link), shared)
 	override CXXFLAGS := -fPIC
-	override LDLIBS   := $(addprefix -l, $(patsubst $(libdir)/lib%.so,%, $(libs)) $(notdir $(external)))
+	override LDLIBS   := $(addprefix -l, $(patsubst $(libdir)/lib%.so,%, $(libs)) $(notdir $(extdir)))
 endif
 
 override cxxver   := -std=c++03
-override CPPFLAGS := $(addprefix -I, $(incdir) $(external)/include) -DPROGRAM_NAME=\"$(basename $(notdir $(firstword $(mains))))\"
+override CPPFLAGS := $(addprefix -I, $(incdir) $(extdir)/include) -DPROGRAM_NAME=\"$(notdir $(CURDIR))\"
 override CXXFLAGS += $(cxxver) -Werror -pedantic -Wall -Wextra -Weffc++ -Wcast-align -Wcast-qual -Wstrict-aliasing \
 						-Wformat=2 -Wwrite-strings -Woverloaded-virtual -Wpointer-arith -Wfloat-equal -Wshadow $(cxxopt)
-override LDFLAGS  += $(addprefix -L, $(libdir) $(external)/lib)
-
-override LDLIBS   += -ltiff -llzma -lpng -lz -ljpeg
+override LDFLAGS  += $(addprefix -L, $(libdir) $(extdir)/lib)
+ifeq ($(enable_tiff), yes)
+	override CPPFLAGS += -DENABLE_TIFF
+	override LDLIBS   += -ltiff -llzma
+endif
+ifeq ($(enable_png), yes)
+	override CPPFLAGS += -DENABLE_PNG
+	override LDLIBS   += -lpng
+endif
+ifeq ($(enable_jpeg), yes)
+	override CPPFLAGS += -DENABLE_JPEG
+	override LDLIBS   += -ljpeg
+endif
+ifeq ($(findstring yes, $(enable_tiff) $(enable_png)), yes)
+	override LDLIBS   += -lz
+endif
 
 ####################
 # Rules
@@ -74,10 +92,12 @@ GTAGS GRTAGS GPATH:
 tags:
 	ctags $(incdir)/*.hpp $(srcdir)/*.cpp
 
+lib: $(libs)
+
 test: build_test
 	set -e; for b in $(bins) $(tstbins); do \
 		echo -n "running '$${b}' ... "; \
-		LD_LIBRARY_PATH=$(patsubst  ,:, $(libdir)):${LD_LIBRARY_PATH} $${b}; \
+		LD_LIBRARY_PATH=$(libdir):${LD_LIBRARY_PATH} $${b}; \
 		echo done.; \
 		gcov -bdflmr -o $(objdir) $(srcdir)/`basename $${b}`.cpp; \
 	done
@@ -93,7 +113,7 @@ clean:
 
 $(bindir)/%: $(objdir)/%.o $(libs)
 	@mkdir -p $(dir $@)
-	$(MAKE) -C $(external)
+	$(MAKE) -C $(extdir) lib
 	$(LINK.cc) -o $@ $< $(LDLIBS)
 
 $(libs): $(filter-out $(patsubst $(srcdir)/%.cpp, $(objdir)/%.o, $(mains)), $(objs))
