--- a/c++/Makefile.flags
+++ b/c++/Makefile.flags
@@ -1,6 +1,6 @@
 comma := ,
 ifeq ($(config), Debug)
-	override cxxopt := -O0 -g3 -pg -fprofile-arcs -ftest-coverage -fsanitize=address \
+	override cxxopt := -Og -g3 -pg -fprofile-arcs -ftest-coverage -fsanitize=address \
 						-fsanitize=leak -fsanitize=undefined -fstack-protector-all
 else ifeq ($(config), Release)
 	override cxxopt := -O3 -s
@@ -18,7 +18,7 @@ endif
 override cxxver   := -std=c++03
 override CPPFLAGS += $(addprefix -I, $(incdir)) -DPROGRAM_NAME=\"$(notdir $(CURDIR))\"
 override CXXFLAGS += $(cxxver) -Werror -pedantic -Wall -Wextra -Weffc++ -Wcast-align -Wcast-qual -Wstrict-aliasing \
-						-Wformat=2 -Wwrite-strings -Woverloaded-virtual -Wpointer-arith -Wfloat-equal -Wshadow $(cxxopt)
+						-Wformat=2 -Wwrite-strings -Woverloaded-virtual -Wpointer-arith -Wfloat-equal -Wshadow $(cxxopt) -march=native
 override LDFLAGS  += $(addprefix -L, $(libdir)) $(addprefix -Wl$(comma)-rpath$(comma), $(abspath $(libdir)))
 ifeq ($(enable_tiff), yes)
 	override CPPFLAGS += -DENABLE_TIFF
