--- a/c++/Makefile.flags
+++ b/c++/Makefile.flags
@@ -17,7 +17,7 @@ endif
 
 override cxxver   := -std=c++03
 override CPPFLAGS += $(addprefix -I, $(incdir)) -DPROGRAM_NAME=\"$(notdir $(CURDIR))\"
-override CXXFLAGS += $(cxxver) -march=native -Werror -Wpedantic -Wall -Wextra -Weffc++ -Wcast-align -Wcast-qual -Wold-style-cast -Wstrict-aliasing \
+override CXXFLAGS += $(cxxver) -march=native -Werror -Wpedantic -Wall -Wextra -Weffc++ -Wcast-align -Wcast-qual -Wconversion -Wold-style-cast -Wstrict-aliasing \
 						-Wformat=2 -Wwrite-strings -Woverloaded-virtual -Wpointer-arith -Wfloat-equal -Wshadow -Wdisabled-optimization -Wlogical-op $(cxxopt) \
 						-Wunsafe-loop-optimizations
 override LDFLAGS  += $(addprefix -L, $(libdir)) $(addprefix -Wl$(comma)-rpath$(comma), $(abspath $(libdir)))
