--- a/c++/Makefile.flags
+++ b/c++/Makefile.flags
@@ -7,15 +7,15 @@ else ifeq ($(config), Release)
 endif
 
 ifeq ($(link), static)
-	override CXXFLAGS := --static
-	override LDLIBS   := $(addprefix -l, $(patsubst $(libdir)/lib%.a,%,  $(libs)) $(notdir $(extdir)))
-	override cxxopt   := $(subst -fsanitize=undefined, -static-libubsan, $(subst -fsanitize=address, -static-libasan, $(cxxopt)))
+	override CXXFLAGS += --static
+	override LDLIBS   += $(addprefix -l, $(patsubst $(libdir)/lib%.a,%,  $(libs)) $(notdir $(extdir)))
+	override cxxopt   += $(subst -fsanitize=undefined, -static-libubsan, $(subst -fsanitize=address, -static-libasan, $(cxxopt)))
 else ifeq ($(link), shared)
-	override CXXFLAGS := -fPIC
+	override CXXFLAGS += -fPIC
 	ifeq ($(findstring mingw, $(CXX)), mingw)
-		override LDLIBS   := $(addprefix -l, $(patsubst $(libdir)/lib%.dll,%, $(libs)) $(notdir $(extdir)))
+		override LDLIBS += $(addprefix -l, $(patsubst $(libdir)/lib%.dll,%, $(libs)) $(notdir $(extdir)))
 	else
-		override LDLIBS   := $(addprefix -l, $(patsubst $(libdir)/lib%.so,%,  $(libs)) $(notdir $(extdir)))
+		override LDLIBS += $(addprefix -l, $(patsubst $(libdir)/lib%.so,%,  $(libs)) $(notdir $(extdir)))
 	endif
 endif
 
