--- a/c++/Makefile.flags
+++ b/c++/Makefile.flags
@@ -1,7 +1,9 @@
 comma := ,
 ifeq ($(config), Debug)
-	override cxxopt := -Og -g3 -pg -fprofile-arcs -ftest-coverage -fsanitize=address \
-						-fsanitize=leak -fsanitize=undefined -fstack-protector-all
+	override cxxopt := -Og -g3 -pg -fprofile-arcs -ftest-coverage -fstack-protector-all
+	ifneq ($(findstring mingw, $(CXX)), mingw)
+		override cxxopt += -fsanitize=address -fsanitize=leak -fsanitize=undefined
+	endif
 else ifeq ($(config), Release)
 	override cxxopt := -O3 -s
 endif
