16bpcgenにおいて、端末向けにtrue colorなANSIエスケープシーケンスを吐くプログラム書いた。

--- a/c++/16bpcgen/Makefile
+++ b/c++/16bpcgen/Makefile
@@ -1,7 +1,7 @@
 include ../Makefile.config
 
 srcdir := src
-mains  := $(addprefix $(srcdir)/, 16bpcgen.cpp image_formats.cpp test_patterns.cpp image_processes.cpp colorspace.cpp)
+mains  := $(addprefix $(srcdir)/, 16bpcgen.cpp image_formats.cpp test_patterns.cpp image_processes.cpp colorspace.cpp terminal.cpp)
 srcs   := $(addprefix $(srcdir)/, Image.cpp Pixel.cpp PatternGenerators.cpp ImageProcesses.cpp PixelConverters.cpp) $(mains)
 assdir := assets
 assets := $(addprefix $(srcdir)/$(assdir)/, color_matching_functions.tar.gz)
