--- a/c++/Makefile.flags
+++ b/c++/Makefile.flags
@@ -26,7 +26,9 @@ override cxxver   := -std=c++03
 override CPPFLAGS += $(addprefix -I, $(incdir)) -DPROGRAM_NAME=\"$(notdir $(CURDIR))\" -DPROGRAM_REVISION=\"$(shell echo -n rev.\\ $(shell git rev-parse --short HEAD || echo unknown),\\ built\\ at\\ $(shell LANG=C date +'%Y/%m/%d\\ %H:%M:%S'))\"
 override CXXFLAGS += $(cxxver) -march=native -Werror -Wextra -Wcast-align -Wstrict-aliasing -Wshadow \
 					 $(filter-out -Wzero-as-null-pointer-constant -Wsuggest-override, $(shell LANG=C command $(CXX) -fsyntax-only -Q --help=warnings,^joined,^separate,common --help=warnings,^joined,^separate,c++ | grep -v '\[enabled\]\|-Wabi\|-Waggregate-return\|-Wchkp\|-Wc90-c99-compat\|-Wpadded\|-Wsystem-headers\|-Wtraditional[^-]\|-Wnamespaces\|-Wtemplates' | grep -oe '-W[[:graph:]]\+' | sed -e 's/<[0-9,]\+>//')) \
-					 -Wno-error=format= -Wno-error=sign-conversion \
+					 -Wno-error=arith-conversion \
+					 -Wno-error=format= \
+					 -Wno-error=sign-conversion \
 					 -Wno-error=suggest-attribute=const \
 					 -Wno-error=suggest-attribute=format \
 					 -Wno-error=suggest-attribute=noreturn \
